turnkey-couchdb-17.0 (1) turnkey; urgency=low

  * Installed CouchDB v3.2.1 from Apache repos.

  * Switched to using apache.jfrog.io apt repository.

  * Host Control Panel with PM2 instead of couchapp.

  * Remain PBKDF2 unchanged since last appliance release.
    The setting is available via Fauxton UI in the config area.

  * Note: Please refer to turnkey-core's 17.0 changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Zhenya Hvorostian <zhenya@turnkeylinux.org>  Sat, 19 Feb 2022 02:28:00 +0300

turnkey-couchdb-16.1 (1) turnkey; urgency=low

  * Installed CouchDB v3.1.1 from upstream debian repos.

  * Increased Nginx http request body limit to 20MB (default is 1MB) - closes
    #1184.

  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Stefan Davis <stefan@turnkeylinux.org>  Wed, 10 Feb 2021 02:51:02 +1100

turnkey-couchdb-16.0 (1) turnkey; urgency=low

  * Installed CouchDB v3.1.0 from upstream debian repos.

  * Explcitly disable TLS<1.2 (i.e. SSLv3, TLSv1, TLSv1.1). (v15.x
    TurnKey releases supported TLS 1.2, but could fallback as low as TLSv1).

  * Update SSL/TLS cyphers to provide "Intermediate" browser/client support
    (suitable for "General-purpose servers with a variety of clients,
    recommended for almost all systems"). As provided by Mozilla via
    https://ssl-config.mozilla.org/.

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Stefan Davis <stefan@turnkeylinux.org>  Thu, 11 Jun 2020 16:02:24 +1000

turnkey-couchdb-15.0 (1) turnkey; urgency=low

  * Installed CouchDB v2.1.2 from upstream source code.

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.
