@@ -1,4 +1,3 @@
-COMMON_OVERLAYS += tkl-webcp
-
+include $(FAB_PATH)/common/mk/turnkey/tkl-webcp.mk
 include $(FAB_PATH)/common/mk/turnkey/nginx.mk
 include $(FAB_PATH)/common/mk/turnkey.mk
