@@ -1,6 +1,6 @@
-#!/bin/sh -ex
+#!/bin/bash -ex
 
-source /usr/local/bin/tkl_bashlib
+source /usr/local/src/tkl-bashlib/init.sh
 
 ADMIN_NAME=admin
 ADMIN_PASS=turnkey
@@ -10,51 +10,34 @@ SRC=/usr/local/src
 
 # pre-seed couchdb package - repo config in overlay
 debconf-set-selections <<EOF
-couchdb	couchdb/adminpass      	        password    $ADMIN_PASS
-couchdb	couchdb/adminpass_again         password    $ADMIN_PASS
-couchdb	couchdb/postrm_remove_databases	boolean	    false
-couchdb	couchdb/have_1x_databases       note
-couchdb	couchdb/bindaddress             string      127.0.0.1
-couchdb	couchdb/cookie                  string      cookieMonster
-couchdb	couchdb/nodename                string      couchdb@localhost
-couchdb	couchdb/mode                    select      standalone
+couchdb	couchdb/adminpass password $ADMIN_PASS
+couchdb	couchdb/adminpass_again password $ADMIN_PASS
+couchdb	couchdb/postrm_remove_databases boolean false
+couchdb	couchdb/bindaddress string 127.0.0.1
+couchdb	couchdb/cookie string cookieMonster
+couchdb	couchdb/nodename string couchdb@localhost
+couchdb	couchdb/mode select standalone
 EOF
 
 apt-get update
 apt-get install --assume-yes couchdb
 
-# set admin password (will be hashed) and secret
-CONF=/opt/couchdb/etc/local.ini
-sed -i "s|^;admin =.*|$ADMIN_NAME = $ADMIN_PASS|" \
-    '/opt/couchdb/etc/local.d/10-admins.ini'
-cat >>$CONF<<EOF
-
-[couch_httpd_auth]
-secret = $(mcookie)
-EOF
-
 # raise iterations and min_iterations from the absurdly low `10`
 # to a bare minimum of `1000`
+CONF=/opt/couchdb/etc/local.ini
 sed -i "/^\[chttpd\]/ aiterations = 1000" $CONF
 sed -i "/^\[chttpd\]/ amin_iterations = 1000" $CONF
 sed -i "/^\[couch_httpd_auth\]/ aiterations = 1000" $CONF
 sed -i "/^\[couch_httpd_auth\]/ amin_iterations = 1000" $CONF
 
 service couchdb start
-while ! port_listening 5984; do
-    sleep 1
-done
+
+wait_for_listen 5984 1 # wait 1 secs between each retry
+
 curl -X PUT http://$ADMIN_NAME:$ADMIN_PASS@127.0.0.1:5984/_users
 curl -X PUT http://$ADMIN_NAME:$ADMIN_PASS@127.0.0.1:5984/_replicator
 systemctl enable couchdb
 service couchdb stop
-
-chown -R node:node /opt/tklweb-cp
-su -lc "[ "$FAB_HTTP_PROXY" ] && export HTTP_PROXY=$FAB_HTTP_PROXY; "\
-    "cd /opt/tklweb-cp && npm i fauxton" $NODEUSER
-su -lc "[ "$FAB_HTTP_PROXY" ] && export HTTP_PROXY=$FAB_HTTP_PROXY; "\
-    "cd /opt/tklweb-cp && pm2 start ecosystem.config.js && sleep 5 "\
-    "&& pm2 save && pm2 kill" $NODEUSER
 
 # configure nginx
 ln -s /etc/nginx/sites-available/couchdb /etc/nginx/sites-enabled/couchdb
