@@ -25,7 +25,7 @@
                     <div></div>
                     <div>
                         <script type="text/javascript">
-                            document.write(a_href+':12320">')
+                            document.write(a_href+':12320">');
                         </script>
                             <img src="/images/shell.png">
                             <span>Web Shell</span>
@@ -33,7 +33,7 @@
                     </div>
                     <div>
                         <script type="text/javascript">
-                            document.write(a_href+':12321">')
+                            document.write(a_href+':12321">');
                         </script>
                             <img src="/images/webmin.png">
                             <span>Webmin</span>
@@ -41,7 +41,7 @@
                     </div>
                     <div>
                         <script type="text/javascript">
-                            document.write(a_href+'/couchdb/_utils/">')
+                            document.write(a_href+'/couchdb/_utils/">');
                         </script>
                             <img src="/images/fauxton.png">
                             <span>Fauxton</span>
@@ -58,9 +58,9 @@
             <h2>Connecting to CouchDB</h2>
 
             <p>By default, raw CouchDB access is via the
-            <script type="text/javascript">document.write(a_href+'/couchdb">/couchdb</a>')</script>
+            <script type="text/javascript">document.write(a_href+'/couchdb">/couchdb</a>');</script>
             sub-directory. I.e.:</p>
-            <pre><script type="text/javascript">document.write(href+'couchdb')</script></pre>
+            <pre><script type="text/javascript">document.write(href+'couchdb');</script></pre>
             <p>If you would rather access CouchDB via the naked domain (i.e. without the '/couchdb' URL
             suffix) then log into your server via ssh and enable the alternate Nginx config we supply:</p>
             <pre>
